# Health_Sentinel

./: .gitmodules  CMakeLists.txt  main.c
modules/: email.c  email.h  lcd.c  lcd.h  spo2.c  spo2.h  temperature.c  temperature.h
